2023-08-06 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Hint at the possibility of combining additional fields and substructure fields for transformations, resolves #292
    * Allow for wildcard without condition in arrayPath property, resolves #291
    * Allow to set fixed value at column configuration-level, resolves #293

2023-07-10 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Make it possible ot download imported data during preview runs, resolves #289

2023-07-04 Francois Suter (Idéative)  <typo3@ideative.ch>

    * Let Scheduler task succeed on warnings for all/grouped tables (thanks to Mathias Brodala)

2023-05-05 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve event page and add missing Report event, references #279
	* Drop support for old-style Connector Services, resolves #285
	* Reset abort process flag upon each synchronization, references #284

2023-05-02 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Introduce webhook in new Report step, resolves #279
	* Make it possible to run steps despite process being aborted, resolves #284

2023-04-24 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Introduce reaction, resolves #278

2023-04-14 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Introduce processed configuration, resolves #281

2023-04-10 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Drop support for PHP 7.2 and 7.3, clean up code accordingly, resolves #280

2023-04-08 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Compatiblity with TYPO3 12 and PHP 8.1, resolves #269
	* Update DataTables to latest version (1.13.4), resolves #268
	* Remove deprecated code, resolves #270

2023-02-28 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Adapt backend modules to new backend templating, resolves #267

2023-02-26 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 6.3.2

2023-02-25 Mathias Brodala (Pagemachine AG)  <mbrodala@pagemachine.de>
