@@ -1,3 +1,7 @@
+2023-08-07 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+    * Allow explicit ordering of columns for processing, resolves #255
+
 2023-08-06 Francois Suter (Idéative)  <typo3@ideative.ch>
 
     * Hint at the possibility of combining additional fields and substructure fields for transformations, resolves #292
